syntax = "proto3";

package hotelpb;

option go_package = "hotelpb/";

service HotelService {
  rpc GetRoomsByHotelId (GetRoomsRequest) returns (GetRoomsResponse);
}

message GetRoomsRequest {
  int32 hotel_id = 1;
}

message Room {
  int32 id = 1;
  int32 hotel_id = 2;
  int32 room_type_id = 3;
  int32 number = 4;
  int32 cost = 5;
}

message GetRoomsResponse {
  repeated Room rooms = 1;
}
